--- a/index.html
+++ b/index.html
@@ -4,28 +4,110 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Responvie S.R.L.</title>
-        <link rel="icon" href="PERCORSO" sizes="16x16 24x24 32x32 48x48 64x64 128x128">
+        <title>Spotify</title>
+        <link rel="icon" href="img/logo-small.svg" sizes="16x16 24x24 32x32 48x48 64x64 128x128">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
 
     <body>
-        <header>
-            <nav>
+        <main class="d-flex">
+            <aside>
 
 
+            </aside>
+            <div class="cta">
+                <div class="button f-bianco">EFFETTUA L'UPGRADE</div>
 
-            </nav>
-
-
-        </header>
-
-        <main>
-
-            
-
+            </div>
+            <div class="content">
+                <nav class="nav-main">
+                    <ul>
+                        <li><a class="f-gscuro" href="#">IN EVIDENZA</a></li>
+                        <li><a class="f-gscuro" href="#">PODCAST</a></li>
+                        <li><a class="f-gscuro" href="#">CLASSIFICHE</a></li>
+                        <li><a class="f-gscuro" href="#">GENERI E MOOD</a></li>
+                        <li><a class="f-gscuro" href="#">NUOVE USCITE</a></li>
+                        <li><a class="f-gscuro" href="#">SCOPRI</a></li>
+                    </ul>
+                </nav>
+                <section id="recently-played">
+                    <h2 class="f-bianco">Recently-played</h2>
+                    <ul class="songs d-flex wrap">
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                    </ul>
+                </section>
+                <section id="recently-played">
+                    <h2 class="f-bianco">Recently-played</h2>
+                    <ul class="songs d-flex wrap">
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                    </ul>
+                </section>
+                <section id="recently-played">
+                    <h2 class="f-bianco">Recently-played</h2>
+                    <ul class="songs d-flex wrap">
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                        <li class="album">
+                            <img src="img/metal_lifting.jpg" alt="metal">
+                            <h3 class="f-bianco">Heavy Metal</h3>
+                            <span class="f-gscuro">Subtitle</span>
+                        </li>
+                    </ul>
+                </section>
+            </div>
         </main>
-
+        <footer class="d-flex">
+            <div id="footer-left f-bianco">
+                LEFT
+            </div>
+            <div id="footer-center f-bianco">
+                CENTER
+            </div>
+            <div id="footer-right f-bianco">
+                RIGHT
+            </div>
+        </footer>
     </body>
 </html>
