--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
             </aside>
             <div class="cta">
-                <a class="button f-bianco" href="#">EFFETTUA L'UPGRADE</a>
+                <a class="button f-bianco scale" href="#">EFFETTUA L'UPGRADE</a>
             </div>
             <div class="content">
                 <nav>
@@ -78,7 +78,7 @@
                 <section id="recently-played">
                     <h2 class="f-bianco">Recently-played</h2>
                     <ul class="songs d-flex wrap">
-                        <li class="album">
+                        <li class="album scale">
                             <div class="over">
                                 <img src="img/metal_lifting.jpg" alt="metal">
                                 <div class="overlay"><i class="fa-regular fa-circle-play f-bianco"></i></div>
@@ -86,7 +86,7 @@
                             <h3 class="f-bianco">Heavy Metal</h3>
                             <span class="f-gscuro">Subtitle</span>
                         </li>
-                        <li class="album">
+                        <li class="album  scale">
                             <div class="over">
                                 <img src="img/stranger.jpeg" alt="stranger things">
                                 <div class="overlay"><i class="fa-regular fa-circle-play f-bianco"></i></div>
@@ -94,7 +94,7 @@
                             <h3 class="f-bianco">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
                             <span class="f-gscuro">Kyle Dixon & Michael Stein</span>
                         </li>
-                        <li class="album">
+                        <li class="album  scale">
                             <div class="over">
                                 <img src="img/aquietplace.jpeg" alt="a quiet place">
                                 <div class="overlay"><i class="fa-regular fa-circle-play f-bianco"></i></div>
@@ -102,7 +102,7 @@
                             <h3 class="f-bianco">A quit place</h3>
                             <span class="f-gscuro">Subtitle</span>
                         </li>
-                        <li class="album">
+                        <li class="album  scale">
                             <div class="over">
                                 <img src="img/split.jpeg" alt="split">
                                 <div class="overlay"><i class="fa-regular fa-circle-play f-bianco"></i></div>
@@ -110,7 +110,7 @@
                             <h3 class="f-bianco">Split</h3>
                             <span class="f-gscuro">Subtitle</span>
                         </li>
-                        <li class="album">
+                        <li class="album  scale">
                             <div class="over">
                                 <img src="img/cure.jpeg" alt="A cure for wellness">
                                 <div class="overlay"><i class="fa-regular fa-circle-play f-bianco"></i></div>
@@ -118,7 +118,7 @@
                             <h3 class="f-bianco">A cure for wellness</h3>
                             <span class="f-gscuro">Subtitle</span>
                         </li>
-                        <li class="album">
+                        <li class="album  scale">
                             <div class="over">
                                 <img src="img/sinister.jpeg" alt="Sinister">
                                 <div class="overlay"><i class="fa-regular fa-circle-play f-bianco"></i></div>
@@ -132,14 +132,14 @@
                     <h2 class="f-bianco">Creato per John Doe</h2>
                     <p class="f-gscuro">Più ascolti, più accurati saranno i suggerimenti</p>
                     <ul class="songs d-flex wrap">
-                        <li class="album">
+                        <li class="album  scale">
                             <div class="over">
                                 <img src="img/radar.jpeg" alt="Release Radar">
                                 <div class="overlay"><i class="fa-regular fa-circle-play f-bianco"></i></div>
                             </div>
                             <h3 class="f-bianco">Release Radar</h3>
                         </li>
-                        <li class="album">
+                        <li class="album  scale">
                             <div class="over">
                                 <img src="img/mixdaily.jpeg" alt="Daily Mix 1">
                                 <div class="overlay"><i class="fa-regular fa-circle-play f-bianco"></i></div>
@@ -152,14 +152,14 @@
                     <h2 class="f-bianco">Artisti più popolari</h2>
                     <p class="f-gscuro">Più ascolti, più accurati saranno i suggerimenti</p>
                     <ul class="songs d-flex wrap">
-                        <li class="album">
+                        <li class="album  scale">
                             <div class="over">
                                 <img class="rounded" src="img/youg.jpeg" alt="Lana Del Rey">
                                 <div class="overlay rounded"><i class="fa-regular fa-circle-play f-bianco"></i></div>
                             </div>
                             <h3 class="f-bianco">Lana Del Rey</h3>
                         </li>
-                        <li class="album">
+                        <li class="album  scale">
                             <div class="over">
                                 <img  class="rounded" src="img/einaudi.jpeg" alt="Ludovico Einaudi">
                                 <div class="overlay rounded"><i class="fa-regular fa-circle-play f-bianco"></i></div>
@@ -186,25 +186,33 @@
                 <div class="bottoni d-flex between center">
                     <i class="fa-solid fa-shuffle"></i>
                     <i class="fa-solid fa-backward-step"></i>
-                    <i class="fa-regular fa-circle-play"></i>
+                    <i class="fa-regular fa-circle-play scale"></i>
                     <i class="fa-solid fa-forward-step"></i>
                     <i class="fa-solid fa-rotate-right"></i>
                 </div>
 
-                <div>
-                    <span class="f-bianco">0:25</span>
-                    <input type="range">
-                    <span class="f-bianco">4:35</span>
+                <div class="footer-slider d-flex center">
+                    <div class="f-bianco">0:25</div>
+                    <div class="slider">
+                        <div class="timing">
+                            <div class="point"></div>
+                        </div>
+                    </div>
+                    <div class="f-bianco">4:35</div>
                 </div>
 
             </div>
-            <div id="footer-right" class="f-bianco d-flex between">
-                <div>
+            <div id="footer-right" class="f-bianco d-flex between center">
+                <div class="footer-right-icon">
                     <i class="fa-solid fa-list"></i>
                     <i class="fa-solid fa-desktop"></i>
                     <i class="fa-solid fa-volume-high"></i>
                 </div>
-                <input type="range">
+                <div class="slider">
+                    <div class="timing">
+                        <div class="point"></div>
+                    </div>
+                </div>
             </div>
         </footer>
     </body>
