--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="content">
                 <nav>
                     <ul class="d-flex wrap nav-main">
-                        <li><a class="f-gscuro" href="#">IN E<u>VIDE</u>NZA</a></li>
+                        <li><a class="f-gscuro" href="#">IN E<div>VIDE</div>NZA</a></li>
                         <li><a class="f-gscuro" href="#">PODCAST</a></li>
                         <li><a class="f-gscuro" href="#">CLASSIFICHE</a></li>
                         <li><a class="f-gscuro" href="#">GENERI E MOOD</a></li>
