--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -75,9 +75,9 @@
                         <li><a class="f-gscuro" href="#">SCOPRI</a></li>
                     </ul>
                 </nav>
-                <section id="recently-played">
+                <section id="recently-played" class="hidden">
                     <h2 class="f-bianco">Recently-played</h2>
-                    <ul class="songs d-flex wrap">
+                    <ul class="songs d-flex">
                         <li class="album scale">
                             <div class="over">
                                 <img src="img/metal_lifting.jpg" alt="metal">
@@ -131,7 +131,7 @@
                 <section id="creato-per">
                     <h2 class="f-bianco">Creato per John Doe</h2>
                     <p class="f-gscuro">Più ascolti, più accurati saranno i suggerimenti</p>
-                    <ul class="songs d-flex wrap">
+                    <ul class="songs d-flex">
                         <li class="album  scale">
                             <div class="over">
                                 <img src="img/radar.jpeg" alt="Release Radar">
@@ -151,7 +151,7 @@
                 <section id="artisti-popolari">
                     <h2 class="f-bianco">Artisti più popolari</h2>
                     <p class="f-gscuro">Più ascolti, più accurati saranno i suggerimenti</p>
-                    <ul class="songs d-flex wrap">
+                    <ul class="songs d-flex">
                         <li class="album  scale">
                             <div class="over">
                                 <img class="rounded" src="img/youg.jpeg" alt="Lana Del Rey">
